# graph-of-thoughts-mcp

./: .gitignore  README.md  example_mcp_config.json  pyproject.toml
archived_old_architecture/: README.md  controller.py  operations.py
graph_of_thoughts_mcp/: __init__.py  server.py
